--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,31 @@
 仓库管理系统 - 更新日志
 ====================================
 
+版本 1.2.1 - 2025-10-31
+------------------------
+
+【修复问题】
+1. ✅ 修复页面切换时 500 错误
+   - 问题：operation_logs 表缺少 'update_profile' 和 'change_password' 枚举值
+   - 修复：添加数据库迁移脚本，扩展 operation_type ENUM
+
+【数据库变更】
+1. ✅ 数据库迁移 001：添加操作类型枚举值
+   - 新增：'update_profile'（修改个人信息）
+   - 新增：'change_password'（修改密码）
+   - 位置：database/migrations/001_add_operation_types.sql
+
+【升级说明】
+⚠️ **必须执行数据库迁移**：
+```bash
+mysql -u storage_user -p storage_management < database/migrations/001_add_operation_types.sql
+```
+
+- PM2 零停机重启：pm2 reload ecosystem.config.js
+- 前端刷新浏览器即可
+
+====================================
+
 版本 1.2.0 - 2025-10-29
 ------------------------
 
